part4/4.08.Project_v2.1/manifests/pg-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-ss
  namespace: todos-ns
spec:
  serviceName: pg-ss-svc
  replicas: 1
  selector:
    matchLabels:
      app: pg-ss
  template:
    metadata:
      labels:
        app: pg-ss
    spec:
      containers:
        - name: postgresql-db
          image: postgres:14.3-alpine3.16
          ports:
            - name: pg-port
              containerPort: 5432
          volumeMounts:
            - name: postgresql-db-disk
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: postgresql-db-disk
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 512Mi
