part4/4.08.Project_v2.1/manifests/q-cnsmr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-q-consumer
  namespace: todos-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-q-consumer
  template:
    metadata:
      labels:
        app: todos-q-consumer
    spec:
      containers:
        - name: todos-q-consumer
          image: Q_CNSMR_IMAGE
