part4/4.08.Project_v2.1/manifests/q-pub-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-q-publisher
  namespace: todos-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-q-publisher
  template:
    metadata:
      labels:
        app: todos-q-publisher
    spec:
      containers:
        - name: todos-q-publisher
          image: Q_PUB_IMAGE
