part4/4.08.Project_v2.1/manifests/rproxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-rproxy
  namespace: todos-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-rproxy
  template:
    metadata:
      labels:
        app: todos-rproxy
    spec:
      containers:
        - name: todos-rproxy
          image: RPROXY_IMAGE
